from ucommon 5.4.3 to 5.4.4
- mapof and listof added
- semaphore default for commoncpp set to 0

from ucommon 5.4.2 to 5.4.3
- fixes for supporting ancient gcc compilers (at least >=2.96!)
- bug in Conditional gettimeout, stack and queue suggested by Pollak

from ucommon 5.4.1 to 5.4.2
- fixes for older gcc builds and template issues.
- bugfix for ConditionalAccess constructor.
- bugfix for commoncpp address functions.

from ucommon 5.4.0 to 5.4.1
- fixes for windows build.

from ucommon 5.3.0 to 5.4.0
- cleanup for ide use.
- NamedList sort uses system collation.
- some convenience string methods added.
- search and replace, regular expression support.
- UString extended with copy/cut/paste/left/right operations.
- stringpager extended with set/replace method and split.
- added fsys::pipe and fsys::noexec.
- removed unused pipeio subsystem.

from ucommon 5.2.2 to 5.3.0
- sort specific string collation functions added
- more stringpager manipulations possible
- use of stringlist_t for new fsys exec.
- string inpuit and output for bufpager.

from ucommon 5.2.1 to 5.2.2
- use strcoll for sorting when possible
- common c++ object linking, maps, and ref counted pointers added back
- stringpager supports ordered add and sorting
- directory pager and list type added
- no -L or -I paths in default installs (multi-arch issue)

from ucommon 5.2.0 to 5.2.1
- fixed issue with static linking initialization order
- shell release method

from ucommon 5.1.2 to 5.2.0
- improved shell::detach support and new pdetach utility
- fsys generic basic file operations
- commoncpp file and dso compatibility support added

from ucommon 5.1.1 to 5.1.2
- corrected copyright.  since cc libs were moved to bayonne and commoncpp
  had been added, ALL of ucommon (including commoncpp2) are L-GPL, not just
  the "core" library.
- more standardized manpages

from ucommon 5.1.0 to 5.1.1
- better handling of strerror_r support.

from ucommon 5.0.7 to 5.1.0