@@ -87,7 +87,6 @@ else()
 endif()
 
 option(BUILD_TESTING "Set to ON to build test programs" OFF)
-option(BUILD_COMPAT "Set to OFF to disable Common C++ compatibility" ON)
 
 MESSAGE( STATUS "Configuring GNU ${PROJECT_NAME} ${VERSION}...")
 include(CheckFunctionExists)
@@ -406,7 +405,7 @@ if(NOT WIN32)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-config.cmake ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.spec.cmake ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.spec @ONLY)
 
-    if(BUILD_COMPAT)
+    if(BUILD_STDLIB)
         configure_file(${CMAKE_CURRENT_SOURCE_DIR}/commoncpp.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/commoncpp.pc)
         configure_file(${CMAKE_CURRENT_SOURCE_DIR}/commoncpp-config.cmake ${CMAKE_CURRENT_BINARY_DIR}/commoncpp-config)
     endif()
@@ -424,7 +423,7 @@ set_target_properties(usecure PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSIO
 target_link_libraries(usecure ucommon ${UCOMMON_LIBS} ${WITH_LIBS} ${SECURE_LIBS})
 add_dependencies(usecure ucommon)
 
-if(BUILD_COMPAT)
+if(BUILD_STDLIB)
     add_library(commoncpp ${BUILD_LIBRARY_TYPE} ${commoncpp_src} ${commoncpp_inc})
     set_target_properties(commoncpp PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSION})
     target_link_libraries(commoncpp ucommon ${UCOMMON_LIBS} ${WITH_LIBS} ${SECURE_LIBS})
@@ -553,7 +552,7 @@ endif()
 if(NOT WIN32)
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${INSTALL_LIBDIR}/pkgconfig)
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ucommon-config DESTINATION ${INSTALL_BINDIR})
-    if(BUILD_COMPAT)
+    if(BUILD_STDLIB)
         install(FILES ${CMAKE_CURRENT_BINARY_DIR}/commoncpp-config DESTINATION ${INSTALL_BINDIR})
         install(FILES ${CMAKE_CURRENT_BINARY_DIR}/commoncpp.pc DESTINATION ${INSTALL_LIBDIR}/pkgconfig)
     endif()
@@ -562,7 +561,7 @@ endif(NOT WIN32)
 install(FILES ${ucommon_inc} ${secure_inc} DESTINATION ${INSTALL_INCLUDEDIR}/ucommon    COMPONENT headers)
 install(FILES ${commoncpp_inc} DESTINATION ${INSTALL_INCLUDEDIR}/commoncpp  COMPONENT headers)
 
-if(BUILD_COMPAT)
+if(BUILD_STDLIB)
     install(TARGETS commoncpp DESTINATION ${INSTALL_LIBDIR} COMPONENT libraries)
 endif()
 
